--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.3"
+    "babel-core": "^6.26.3",
+    "babel-traverse": "^6.26.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1"
   }
 }
